Mon Jun  7 22:25:24 2004  Matthias Clasen  <maclas@gmx.de>

	* tests/run-markup-tests.sh: Default to silence, but support
	a -v argument to get the old output back. 

2004-06-06  Tor Lillqvist  <tml@iki.fi>

	* glib/gutils.c (g_get_any_init): Check home for being
	NULL. (#143812, Ivan Wong)

Sun Jun  6 15:23:00 2004  Pawan Chitrakr  <pawan@nplinu.org>

	* configure.in: Added "ne" (Nepali) in ALL_LINGUAS

Fri Jun  4 19:26:47 2004  Manish Singh  <yosh@gimp.org>

        * glib/galloca.h: cpp #directives should always have the "#" in the
        first column of the the line. Do that for "#pragma alloca". Fixes
        bug #143744.

Wed Jun  2 00:57:16 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gtypes.h: Use higher precision for the mathematical
	constants.  (#141941, Morten Welinder)

Tue Jun  1 22:01:40 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gmarkup.c (advance_char): Fix an off-by-one error 
	in g_markup_parse_context_parse().  (#142794, Morten Welinder)

Sun May 16 23:23:29 2004  Matthias Clasen  <maclas@gmx.de>

        Merged from 2.4:
	
	* glib/gcompletion.c (g_completion_add_items):
	(g_completion_remove_items): Remove unnecessary 
	checks.  (#142559, Morten Welinder)

2004-05-15  Tor Lillqvist  <tml@iki.fi>

	* glib/gutils.c (g_get_any_init): [Win32] Only believe HOME if it
	is an absolute path and exists. (#138618)

2004-05-14  Tor Lillqvist  <tml@iki.fi>

	* glib/gnulib/vasnprintf.c (vasnprintf): Handle empty digit string
	for precision correctly. (#142400)

	For backward compatibility with the Trio implementation, make "ll"
	format modifer work on Win32, too. Change into "I64" before
	passing to the system printf. (#142433)

	* tests/printf-test.c (main): Add tests for the above.

2004-05-10  Matthias Clasen  <mclasen@redhat.com>

	Merge from 2.4:
	
	* glib/gmain.c (block_source, unblock_source): Make these 
	static.  (#142230, Morten Welinder)

2004-05-10  Tor Lillqvist  <tml@iki.fi>
